# KinectFusion

./: .gitignore  CMakeLists.txt  README.md  kinectfusion.cpp  run_kinectfusion_tumrgbd.cpp
cuda/: extract_pointcloud.cu  pose_estimation.cu  surface_measurement.cu  surface_prediction.cu  surface_reconstruction.cu
data/: download_tumrgbd.sh  kinfu_tumrgbd.yaml  rgbd_tum_datasets.txt  rgbd_tum_datasets_2011.txt  template.yaml  tumrgbd.yaml
include/: config.hpp  dataset.hpp  datatypes copy.hpp  datatypes.hpp  kinectfusion.hpp  pose_estimation.hpp  surface_measurement.hpp  surface_prediction.hpp  utils.hpp
include/cuda/: kernel_common.cuh  marching_cubes_tables.cuh  surface_measurement.cu  surface_reconstruct.cu  surface_reconstruct.cuh
src/: kinectfusion.cpp
src/cuda/: extract_pointcloud.cu  marching_cubes.cu  pose_estimation.cu  surface_measurement.cu  surface_prediction.cu  surface_reconstruction.cu
test/: test_dataset.cpp  test_kinectfusion.cpp  test_pose_estimate.cpp  test_pose_estimate__.cpp  test_pose_estimation.cpp  test_surface_measurement copy.cpp  test_surface_measurement.cpp  test_surface_prediction.cpp  test_surface_reconstruct.cpp  test_surface_reconstruction.cpp
